// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Can run .md files and .html file as Vento templates > Use Vento as \`.html\` engine > override-html-engine 1`] = `
"
<p>2 + 2 = 4</p>

<p>This is a cool page</p>
"
`;

exports[`Can run .md files and .html file as Vento templates > Use Vento as \`.md\` engine > override-md-engine 1`] = `
"<p>2 + 2 = 4</p>
<p>This is a cool page</p>
"
`;
